--- a/templates/main.html
+++ b/templates/main.html
@@ -24,6 +24,7 @@
         <button class="quadroOpener" id="calcularExcentricidade" onclick="showQuadro()">Excentricidade</button>
         <button class="quadroOpener" id="getAdjacentVerticesButton" onclick="showQuadro()">Adjacência e Grau</button>
         <button class="quadroOpener" id="calcularDiametroButton" onclick="showQuadro()">Calcular Diâmetro</button>
+        <button class="quadroOpener" id="verificarEulerButton" onclick="showQuadro()">Euler</button>
         <button id="openModalButton">Gerar Grafo de Texto</button>
         <input type="file" id="fileInput" accept=".csv">
     </nav>
